[package]
name = "pinocchio-toolkit"
version = "0.1.1"
edition = "2021"
description = "Zero-boilerplate helpers for Pinocchio Solana programs (PDA creation, CPI, etc.)"
license = "MIT OR Apache-2.0"
repository = "https://github.com/NVN404/pinocchio-toolkit"
documentation = "https://docs.rs/pinocchio-toolkit"
homepage = "https://github.com/NVN404/pinocchio-toolkit"
keywords = ["solana", "pinocchio", "pda", "cpi", "no-std"]
categories = ["no-std", "cryptography::cryptocurrencies"]
readme = "README.md"

[lib]
crate-type = ["lib"]

[dependencies]
pinocchio = "0.9"
pinocchio-pubkey = "0.3"
pinocchio-system = "0.3"

[dev-dependencies]
litesvm = "0.2"
solana-sdk = "1.18"
solana-program = "1.18"

[[test]]
name = "test-program"
path = "tests/test-program.rs"
test = false


[features]
default = []
no-entrypoint = []
